# LOS

./: .gitignore  .gitmodules  CMakeLists.txt  LOS.pro  TODO.txt  compute.glsl  main.cpp  matrix.h  solver.cpp  solvergpu.cpp  solvergpu.h
resources/: compute.glsl  resources.qrc
source/: LinearSystem.h  Matrix.h  compute.glsl  main.cpp  solver.h  solvergpu.cpp  solvergpu.h
source/solver/: .SolverGPU.cpp.swo  CreateSolver.cpp  CreateSolver.h  ISolver.h  MatrixUtils.cpp  MatrixUtils.h  ShaderAdapter.cpp  ShaderAdapter.h  Solver.cpp  Solver.h  SolverGPU.cpp  SolverGPU.h
source/timer/: Timer.cpp  Timer.h
source/utils/: MatrixUtils.cpp  MatrixUtils.h
